플로팅메뉴 css 수정, 인트로모션 추가

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -28,3 +28,13 @@ body{
   overflow: hidden;
   clip: rect(0,0,0,0);
 }
+
+/* canvas */
+.no-canvas{display: none;}
+@media(max-width:767px){
+  .no-canvas{
+    display: block;
+    width: 200px !important;
+  }
+  canvas{display: none;}
+}
