--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -2,55 +2,6 @@
 @import url('./reset.css');
 @import url('./common.css');
 
-/* sc-intro-motion */
-.sc-intro-motion{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 50px;
-  font-weight: bold;
-  color: #fff;
-  text-transform: uppercase;
-  background: var(--color-deep-blue);
-  z-index: 100;
-}
-.sc-intro-motion .group-img{
-  position: relative;
-}
-.sc-intro-motion picture{
-  opacity: 0.6;
-}
-.sc-intro-motion .bg-area{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateY(50%);
-  background: #fff;
-  z-index: -1;
-}
-
-/* wrapper */
-body{
-  font-family: 'Roboto', sans-serif;
-  overflow-x: hidden;
-  background: var(--color-light-beige);
-}
-.wrapper{
-  max-width: 100%;
-}
-.index-container{
-  position: relative;
-  margin-top: -80em;
-  z-index: 1;
-}
-
 /* footer */
 .footer{
   display: flex;
@@ -93,15 +44,9 @@ body{
   border-radius: 1em;
   transition: color .3s;
 }
-.float-area a:nth-child(1){
-  color: #fff;
-}
-.float-area a:hover{
+.float-area a.on{
   font-weight: bold;
   color: #fff;
-}
-.float-area a:hover ~ .float-area a{
-  color: var(--color-deep-blue);
 }
 .float-area .float-box{
   position: absolute;
